<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_translator_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.kolin.testya.veiw.translator.TranslatorFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/main_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:weightSum="1">

            <Button
                android:id="@+id/translation_btn_from"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/colorWhite"
                tools:text="Английский" />

            <ImageButton
                android:id="@+id/translation_img_btn_reverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_swap_horiz_white_24px" />

            <Button
                android:id="@+id/translation_btn_to"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/colorWhite"
                tools:text="Английский" />

        </LinearLayout>


    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:addStatesFromChildren="true"
                android:background="@drawable/selector_border"
                android:minHeight="150dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="1">

                <com.example.kolin.testya.veiw.custom_views.CustomAppCompatEditText
                    android:id="@+id/translator_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/write_text"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:scrollbars="vertical" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/translation_clear_edit_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/translation_progress_downloading"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </FrameLayout>


            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/translation_dictionary_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:visibility="visible"
                    android:visibility="gone">

                    <include
                        android:id="@+id/translation_card"
                        layout="@layout/translation_card"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <include
                        android:id="@+id/dictionary_card"
                        layout="@layout/dictionary_card"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

                <TextView
                    android:id="@+id/translation_error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:drawableTop="@drawable/ic_sentiment_very_dissatisfied_grey_24dp"
                    android:padding="8dp"
                    android:text="@string/error_message"
                    android:textAlignment="center"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </FrameLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
