<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_horizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/dialog_btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="?attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/dialog_btn_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="?attr/selectableItemBackground"
        android:text="@string/yes"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack" />

</LinearLayout>